Split code into more files. Also minor additions and fixes

--- a/RPG App.csproj
+++ b/RPG App.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Combat\Characters\Character.cs" />
+    <Compile Include="Combat\Characters\Player.cs" />
     <Compile Include="Combat\Combat.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -57,6 +59,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Map\Map.cs" />
+    <Compile Include="Map\Tiles\Tile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
